--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,11 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            custom_authenticator: App\Security\UserAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -31,6 +36,13 @@ security:
 
 when@test:
     security:
+
+    providers:
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
+                       
         password_hashers:
             # By default, password hashers are resource intensive and take time. This is
             # important to generate secure password hashes. In tests however, secure hashes
