--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,6 +37,10 @@ security:
 when@test:
     security:
 
+      encoders:
+      App\Entity\Person:
+          algorithm: bcrypt
+
     providers:
         app_user_provider:
             entity:
