--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 controllers:
     resource: ../src/Controller/
     type: attribute
+
+controllers_admin:
+    resource: ../src/Controller/Admin
+    type: attribute
