--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "^6.1",
         "symfony/security-bundle": "6.1.*",
+        "symfony/serializer": "6.1.*",
         "symfony/string": "6.1.*",
         "symfony/translation": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
