--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,6 +33,8 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_MASSAGIST # Admin possède les mêmes droits qu'un massagist
 
 when@test:
     security:
